Bus List Complete

--- a/viewbuses.html
+++ b/viewbuses.html
@@ -835,6 +835,7 @@
                                                         <th>View</th>
                                                         <th>Logs</th>
                                                         <th>Device Mgmt</th>
+                                                        <th>Active</th>
                                                         <th>Action</th>                                                       
                                                     </tr>
                                                 </thead>
@@ -856,6 +857,14 @@
 																class="feather icon-play"></i></a>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Power Log"><i
 																class="feather icon-power"></i></a>
+															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Download Log"><i
+																class="feather icon-download"></i></a>
+														</td>
+														<td>
+															<a href="" type="button" class="btn-sm btn-info" 
+																data-bs-toggle="tooltip">Assign</a>
+															<a href="" type="button" class="btn-sm btn-danger" 
+																data-bs-toggle="tooltip">Remove</a>
 														</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
@@ -889,6 +898,14 @@
 																class="feather icon-play"></i></a>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Power Log"><i
 																class="feather icon-power"></i></a>
+															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Download Log"><i
+																class="feather icon-download"></i></a>
+														</td>
+														<td>
+															<a href="" type="button" class="btn-sm btn-info" 
+																data-bs-toggle="tooltip">Assign</a>
+															<a href="" type="button" class="btn-sm btn-danger" 
+																data-bs-toggle="tooltip">Remove</a>
 														</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
@@ -921,6 +938,14 @@
 																class="feather icon-play"></i></a>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Power Log"><i
 																class="feather icon-power"></i></a>
+															<a type="button" class="btn btn-icon btn-rounded btn-outline-warning" title="Download Log"><i
+																class="feather icon-download"></i></a>
+														</td>
+														<td>
+															<a href="" type="button" class="btn-sm btn-info" 
+																data-bs-toggle="tooltip">Assign</a>
+															<a href="" type="button" class="btn-sm btn-danger" 
+																data-bs-toggle="tooltip">Remove</a>
 														</td>
                                                         <td>
 															<div class="form-check form-switch mb-2">
