Route added in Bus list

--- a/viewbuses.html
+++ b/viewbuses.html
@@ -832,6 +832,7 @@
 														<th>Status</th>
 														<th>Name</th>
 														<th>Bus No</th>
+														<th>Route</th>
                                                         <th>View</th>
                                                         <th>Logs</th>
                                                         <th>Device Mgmt</th>
@@ -846,6 +847,7 @@
 																data-bs-toggle="tooltip">online</a></td>
                                                         <td>Mahanagar</td>
                                                         <td>5423</td>
+                                                        <td>Ringroad Route 1</td>
                                                         <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
@@ -887,6 +889,7 @@
 																data-bs-toggle="tooltip">offline</a></td>
                                                         <td>Mahasagar</td>
                                                         <td>423</td>
+                                                        <td>Ringroad Route 2</td>
                                                         <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
@@ -925,8 +928,9 @@
                                                         <td>1</td>
                                                         <td><a href="" type="button" class="btn-outline btn btn-sm btn-primary" 
 																data-bs-toggle="tooltip">online</a></td>
-                                                        <td>Sajha Yatayat</td>
+                                                        <td>Sajha</td>
                                                         <td>5213</td>
+                                                        <td>Sajha Route 1</td>
                                                         <td>
 															<a type="button" class="btn btn-icon btn-rounded btn-outline-primary" title="Screenshot"><i
 																class="feather icon-camera"></i></a>
